third_party/move/tools/move-asm/tests/assembler/undef_label.exp
processed 1 task
task 0 lines 1-6:  publish --print-bytecode [module 0x66::test]
Error: error: unbound branch label `l3`
  ┌─ test:4:5
  │
4 │     br_false l3
  │     ^^^^^^^^^^^


